<resources>
    <string name="app_name">SmishlyaevaKatya_android</string>
    <string name="homework_17">Homework 17</string>
    <string name="homework_18">Homework 18</string>
    <string name="homework_20">Homework 20</string>
    <string name="start">Start</string>
    <string name="start_lifecycle">Start Lifecycle</string>
    <string name="view_model">Start ViewModel</string>
    <string name="start_timer">Start Timer</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="enter_time">Введите время в минутах</string>
    <string name="minsk">Минская область</string>
    <string name="potatoes">Картофель</string>
    <string name="cabbage">Капуста</string>
    <string name="beet">Свекла</string>
    <string name="brest">Брестская область</string>
    <string name="grodno">Гродненская область</string>
    <string name="homework_19">HomeWork19</string>
    <string name="germany">Germany</string>
    <string name="start_server">Start MyServer</string>
    <string name="start_model">Start ViewModel</string>
    <string name="homework_22">Homework 22</string>
    <string name="login">Login</string>
    <string name="avatars" translatable="false">avatars</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="enter_login">enter login here</string>
    <string name="enter_password">enter password here</string>
    <string name="sign_in">Sign in</string>
    <string name="date">"date of birth "</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="mail">e-mail</string>
    <string name="homework_23">Homework 23</string>
    <string name="in_stock">in stock</string>
</resources>